--- a/.github/workflows/Rust.yml
+++ b/.github/workflows/Rust.yml
@@ -36,6 +36,9 @@ jobs:
       - name: Install cargo-audit
         run: cargo install cargo-audit
 
+      - name: Pre-build project
+        run: cargo build
+
       - name: Check for vulnerabilites
         run: cargo audit
 
