[UPDATE] Rust CI
[REMOVE] cargo-audit
[ADD] rustsec/audit-check@v1

--- a/.github/workflows/Rust.yml
+++ b/.github/workflows/Rust.yml
@@ -33,14 +33,11 @@ jobs:
           toolchain: stable
           components: clippy
 
-      - name: Install cargo-audit
-        run: cargo install cargo-audit
+      - name: Check for vulnerabilities
+        uses: rustsec/audit-check@v1
 
       - name: Pre-build project
         run: cargo build
-
-      - name: Check for vulnerabilites
-        run: cargo audit
 
       - name: Check formatting
         run: cargo fmt --check
