--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -20,6 +20,11 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y docker-compose
 
+      - name: Compile Discord Dependencies
+        run: |
+          cd discord/
+          cargo build
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
