[UPDATE] Node.js CI
[ADD] run-name

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,5 +1,7 @@
 name: Node.js CI
 
+run-name: Node.js CI | ${{ github.event_name == 'push' && github.event.head_commit.message || github.event_name == 'pull_request' && github.event.pull_request.title }} by @{{ github.actor }} on ${{ github.ref_name }}
+
 on:
   push:
   pull_request:
