--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,6 +1,6 @@
 name: Node.js CI
 
-run-name: Node.js CI | ${{ github.event_name == 'push' && github.event.head_commit.message || github.event_name == 'pull_request' && github.event.pull_request.title }} by @{{ github.actor }} on ${{ github.ref_name }}
+run-name: Node.js CI | ${{ github.event_name == 'push' && split(github.event.head_commit.message, '\n')[0] || github.event_name == 'pull_request' && github.event.pull_request.title }} by ${{ github.actor }} on '${{ github.ref_name }}'
 
 on:
   push:
