[UPDATE] Rust CI
[EDIT] run-name

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,6 +1,6 @@
 name: Rust CI
 
-run-name: Rust CI | ${{ github.event_name == 'push' && github.event.head_commit.message || github.event_name == 'pull_request' && github.event.pull_request.title }} by @{{ github.actor }} on ${{ github.ref_name }}
+run-name: Rust CI | ${{ github.event_name == 'push' && split(github.event.head_commit.message, '\n')[0] || github.event_name == 'pull_request' && github.event.pull_request.title }} by ${{ github.actor }} on '${{ github.ref_name }}'
 
 on:
   push:
